examples/ref-implementation-devopsday-local/keycloak/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress-localhost
  namespace: keycloak
  annotations:
    argocd.argoproj.io/sync-wave: "100"
spec:
  ingressClassName: "nginx"
  rules:
    - host: localhost
      http:
        paths:
          - path: /keycloak
            pathType: ImplementationSpecific
            backend:
              service:
                name: keycloak
                port:
                  name: http
    - host: devopsday.demo.cloud-native-start.com
      http:
        paths:
          - path: /keycloak
            pathType: ImplementationSpecific
            backend:
              service:
                name: keycloak
                port:
                  name: http
